--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -424,7 +424,7 @@ function decodificarCodigoBalanza(codigo) {
   if (!codigo || codigo.length < 13) return null;
   if (!codigo.startsWith("2")) return null;
 
-  const base = codigo.substring(1, 7).replace(/^0+/, "");
+  const base = codigo.substring(0, 7);
   const pesoStr = codigo.substring(7, 12);
   const peso = parseFloat(pesoStr) / 1000;
 
