--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -1116,7 +1116,7 @@ Cajero: ${venta.atendio}
 `;
   return texto;
 }
-
+window.decodificarCodigoBalanza = decodificarCodigoBalanza;
 </script>
   <!-- 🔹 Área Ticket Imprimible -->
 <div id="ticketArea" style="display:none;">
